--- a/cabal.project
+++ b/cabal.project
@@ -68,7 +68,8 @@ constraints:
   stylish-haskell +ghc-lib,
   -- implicit-hie 0.1.3.0 introduced an unexpected behavioral change.
   -- https://github.com/Avi-D-coder/implicit-hie/issues/50
-  implicit-hie < 0.1.3
+  implicit-hie < 0.1.3,
+  fourmolu -fixity-th
 
 -- This is benign and won't affect our ability to release to Hackage,
 -- because we only depend on `ekg-json` when a non-default flag
