--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -102,15 +102,21 @@ jobs:
                     , DISTRO: "CentOS"
                     , ARTIFACT: "x86_64-linux-centos7"
                     , ADD_CABAL_ARGS: "--enable-split-sections"
-                    },
-                    { image: "rockylinux:8"
-                    , installCmd: "yum -y install epel-release && yum install -y --allowerasing"
-                    , toolRequirements: "autoconf automake binutils bzip2 coreutils curl elfutils-devel elfutils-libs findutils gcc gcc-c++ git gmp gmp-devel jq lbzip2 make ncurses ncurses-compat-libs ncurses-devel openssh-clients patch perl pxz python3 sqlite sudo wget which xz zlib-devel patchelf"
-                    , DISTRO: "Unknown"
-                    , ARTIFACT: "x86_64-linux-unknown"
-                    , ADD_CABAL_ARGS: "--enable-split-sections"
                     }
                   ]
+        # TODO: rm
+        # we need a different image for 9.4.4, because GHC bindists are busted
+        include:
+          - ghc: 8.10.7
+            platform: { image: "rockylinux:8", installCmd: "yum -y install epel-release && yum install -y --allowerasing", toolRequirements: "autoconf automake binutils bzip2 coreutils curl elfutils-devel elfutils-libs findutils gcc gcc-c++ git gmp gmp-devel jq lbzip2 make ncurses ncurses-compat-libs ncurses-devel openssh-clients patch perl pxz python3 sqlite sudo wget which xz zlib-devel patchelf", DISTRO: "Unknown", ARTIFACT: "x86_64-linux-unknown", ADD_CABAL_ARGS: "--enable-split-sections" }
+          - ghc: 9.0.2
+            platform: { image: "rockylinux:8", installCmd: "yum -y install epel-release && yum install -y --allowerasing", toolRequirements: "autoconf automake binutils bzip2 coreutils curl elfutils-devel elfutils-libs findutils gcc gcc-c++ git gmp gmp-devel jq lbzip2 make ncurses ncurses-compat-libs ncurses-devel openssh-clients patch perl pxz python3 sqlite sudo wget which xz zlib-devel patchelf", DISTRO: "Unknown", ARTIFACT: "x86_64-linux-unknown", ADD_CABAL_ARGS: "--enable-split-sections" }
+          - ghc: 9.2.5
+            platform: { image: "rockylinux:8", installCmd: "yum -y install epel-release && yum install -y --allowerasing", toolRequirements: "autoconf automake binutils bzip2 coreutils curl elfutils-devel elfutils-libs findutils gcc gcc-c++ git gmp gmp-devel jq lbzip2 make ncurses ncurses-compat-libs ncurses-devel openssh-clients patch perl pxz python3 sqlite sudo wget which xz zlib-devel patchelf", DISTRO: "Unknown", ARTIFACT: "x86_64-linux-unknown", ADD_CABAL_ARGS: "--enable-split-sections" }
+          - ghc: 9.2.7
+            platform: { image: "rockylinux:8", installCmd: "yum -y install epel-release && yum install -y --allowerasing", toolRequirements: "autoconf automake binutils bzip2 coreutils curl elfutils-devel elfutils-libs findutils gcc gcc-c++ git gmp gmp-devel jq lbzip2 make ncurses ncurses-compat-libs ncurses-devel openssh-clients patch perl pxz python3 sqlite sudo wget which xz zlib-devel patchelf", DISTRO: "Unknown", ARTIFACT: "x86_64-linux-unknown", ADD_CABAL_ARGS: "--enable-split-sections" }
+          - ghc: 9.4.4
+            platform: { image: "fedora:33", installCmd: "dnf install -y", toolRequirements: "autoconf automake binutils bzip2 coreutils curl elfutils-devel elfutils-libs findutils gcc gcc-c++ git gmp gmp-devel jq lbzip2 make ncurses ncurses-compat-libs ncurses-devel openssh-clients patch perl pxz python3 sqlite sudo wget which xz zlib-devel patchelf tree", DISTRO: "Unknown", ARTIFACT: "x86_64-linux-unknown", ADD_CABAL_ARGS: "--enable-split-sections" }
     container:
       image: ${{ matrix.platform.image }}
     steps:
@@ -400,9 +406,9 @@ jobs:
             toolRequirements: libnuma-dev zlib1g-dev libgmp-dev libgmp10 libssl-dev liblzma-dev libbz2-dev git wget lsb-release software-properties-common gnupg2 apt-transport-https gcc autoconf automake build-essential curl ghc gzip libffi-dev libncurses-dev libncurses5 libtinfo5 patchelf tree
             DISTRO: Mint
             ARTIFACT: "x86_64-linux-mint19.3"
-          - image: "rockylinux:8"
-            installCmd: "yum -y install epel-release && yum install -y --allowerasing"
-            toolRequirements: "autoconf automake binutils bzip2 coreutils curl elfutils-devel elfutils-libs findutils gcc gcc-c++ git gmp gmp-devel jq lbzip2 make ncurses ncurses-compat-libs ncurses-devel openssh-clients patch perl pxz python3 sqlite sudo wget which xz zlib-devel patchelf"
+          - image: "fedora:33"
+            installCmd: "dnf install -y"
+            toolRequirements: "autoconf automake binutils bzip2 coreutils curl elfutils-devel elfutils-libs findutils gcc gcc-c++ git gmp gmp-devel jq lbzip2 make ncurses ncurses-compat-libs ncurses-devel openssh-clients patch perl pxz python3 sqlite sudo wget which xz zlib-devel patchelf tree"
             DISTRO: "Unknown"
             ARTIFACT: "x86_64-linux-unknown"
           - image: linuxmintd/mint20.2-amd64
@@ -418,7 +424,7 @@ jobs:
         run: |
           ${{ matrix.installCmd }} curl bash git ${{ matrix.toolRequirements }}
 
-      - if: matrix.platform.DISTRO == 'Unknown'
+      - if: matrix.DISTRO == 'Unknown'
         run: |
           echo "NAME=Linux" > /etc/os-release
           echo "ID=linux" >> /etc/os-release
@@ -432,9 +438,11 @@ jobs:
           path: ./
 
       - name: Create bindist
+        # we need reverse sorting, so that the wrapper binary comes from the oldest GHC always
         run: |
-          for bindist in out-*.tar ; do
-            tar xf "${bindist}"
+          set -eux
+          for bindist in $(find . -mindepth 1 -maxdepth 1 -type f -name 'out-*.tar' -print | sort -r) ; do
+            tar --overwrite -xf "${bindist}"
           done
           unset bindist
           bash .github/scripts/bindist.sh
@@ -694,9 +702,9 @@ jobs:
             toolRequirements: libnuma-dev zlib1g-dev libgmp-dev libgmp10 libssl-dev liblzma-dev libbz2-dev git wget lsb-release software-properties-common gnupg2 apt-transport-https gcc autoconf automake build-essential curl ghc gzip libffi-dev libncurses-dev libncurses5 libtinfo5 patchelf tree
             DISTRO: Mint
             ARTIFACT: "x86_64-linux-mint19.3"
-          - image: "rockylinux:8"
-            installCmd: "yum -y install epel-release && yum install -y --allowerasing"
-            toolRequirements: "autoconf automake binutils bzip2 coreutils curl elfutils-devel elfutils-libs findutils gcc gcc-c++ git gmp gmp-devel jq lbzip2 make ncurses ncurses-compat-libs ncurses-devel openssh-clients patch perl pxz python3 sqlite sudo wget which xz zlib-devel patchelf"
+          - image: "fedora:33"
+            installCmd: dnf install -y
+            toolRequirements: autoconf automake binutils bzip2 coreutils curl elfutils-devel elfutils-libs findutils gcc gcc-c++ git gmp gmp-devel jq lbzip2 make ncurses ncurses-compat-libs ncurses-devel openssh-clients patch perl pxz python3 sqlite sudo wget which xz zlib-devel patchelf tree
             DISTRO: "Unknown"
             ARTIFACT: "x86_64-linux-unknown"
           - image: linuxmintd/mint20.2-amd64
@@ -712,7 +720,7 @@ jobs:
         run: |
           ${{ matrix.installCmd }} curl bash git ${{ matrix.toolRequirements }}
 
-      - if: matrix.platform.DISTRO == 'Unknown'
+      - if: matrix.DISTRO == 'Unknown'
         run: |
           echo "NAME=Linux" > /etc/os-release
           echo "ID=linux" >> /etc/os-release
